[package]
name = "roulette"
version = "0.2.0"
authors = ["Nathan Stoddard"]
description = "An efficient implementation of roulette wheel selection"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nstoddard/roulette"

[lib]
name = "roulette"
doc = true

[dependencies]
rand = "0.7.0"
